# tset-dev-workflow-conan

./: CMakeLists.txt  LICENSE  Makefile  changelog.md  conanfile.py  readme.md
.devcontainer/: Dockerfile  devcontainer.json
tests/: CMakeLists.txt  conanfile.py
